Use hack to prevent wrapping of multiplayer chat form on narrow screens

--- a/static/css/multi.css
+++ b/static/css/multi.css
@@ -404,12 +404,15 @@
 	.chat-form .chat-input-field {
 		display: flex;
 	}
-	.chat-form .chat-input {
-		flex-grow: 1;
-		width: 100%;
-	}
 	.chat-form .send-btn {
 		padding: 0 2rem;
+	}
+	.chat-form .chat-input {
+		flex-grow: 1;
+		width: calc(100px - 67px); /* Prevent flex wrap */
+	}
+	.chat-form .chat-input:focus {
+		width: calc(100px - 24px - 67px); /* Prevent flex wrap */
 	}
 	.chat-form .chat-input:focus + .delete-btn {
 		display: inline-block;
